# ump

./: .gitattributes  ACKNOWLEDGMENTS.md  README.md
LICENSES/: OpenColorIO-LICENSE.txt  THIRD_PARTY_NOTICES.txt  libmpv-LICENSE.txt
docs/: _config.yml  annotations.md  cache.md  color.md  image.md  index.md  inspector.md  installation.md  interface.md  manager.md  overview.md  timeline.md
docs/_includes/: nav.html
docs/_layouts/: default.html
docs/_sass/color_schemes/: custom_dark.scss
docs/_sass/custom/: custom.scss
docs/assets/css/: custom.scss  style.css
source/: CMakeLists.txt
source/LICENSES/: OpenEXR-LICENSE.txt
source/assets/OCIO/ACES_1.3/: README
source/assets/OCIO/Blender/: README
source/shaders/: exr_injection.glsl
source/src/: main.cpp
source/src/annotations/: annotation_io.cpp  annotation_io.h  annotation_manager.cpp  annotation_manager.h  annotation_note.h  annotation_renderer.cpp  annotation_renderer.h  annotation_serializer.h  annotation_toolbar.cpp  annotation_toolbar.h  stroke_smoother.h  viewport_annotator.cpp  viewport_annotator.h
source/src/color/: ocio_config_manager.cpp  ocio_config_manager.h
source/src/gpu/: cuda_exr_processor.cpp.disabled  gpu_compute_processor.h  texture_pool.cpp
source/src/integrations/: frameio_client.cpp  frameio_client.h  frameio_converter.h  frameio_url_parser.cpp
source/src/metadata/: adobe_metadata.cpp  exr_metadata.cpp  video_metadata.cpp  video_metadata.h
source/src/nodes/: node_base.cpp  node_manager.h
source/src/overlay/: safety_overlay_system.h
source/src/player/: conversion_strategy.cpp  direct_exr_cache.cpp  direct_exr_cache.h  direct_exr_cache_OLD.cpp  exr_transcoder.h  frame_cache.h  image_loaders.cpp  image_loaders.h  image_sequence_config.cpp  media_background_extractor.cpp  pipeline_mode.h  thumbnail_cache.cpp  video_player.cpp  video_player.h
source/src/project/: media_item.h  project_manager.cpp  project_manager.h
source/src/ui/: annotation_panel.cpp  node_editor_theme.cpp  node_editor_theme.h  timeline_manager.cpp  timeline_manager.h
source/src/utils/: debug_utils.h  exiftool_helper.cpp  exiftool_helper.h  exr_layer_detector.h  system_pressure_monitor.cpp
src/: main.cpp
src/annotations/: annotation_exporter.cpp  annotation_exporter.h  annotation_serializer.cpp  annotation_toolbar.cpp  stroke_smoother.cpp
src/color/: ocio_pipeline.cpp  ocio_pipeline.h
src/gpu/: cuda_exr_processor.h.disabled  cuda_kernels.cu.disabled  gpu_compute_processor.cpp  opencl_exr_processor.cpp.disabled  opencl_exr_processor.h.disabled  texture_pool.h
src/integrations/: frameio_converter.cpp  frameio_url_parser.h
src/metadata/: adobe_metadata.h  exr_metadata.h  video_metadata.h
src/nodes/: node_base.cpp  node_base.h  node_manager.cpp  node_manager.h
src/overlay/: safety_overlay_system.cpp  svg_overlay_renderer.cpp  svg_overlay_renderer.h
src/player/: direct_exr_cache_OLD.h  dummy_video_generator.cpp  dummy_video_generator.h  exr_transcoder.cpp  frame_cache.cpp  image_loader_interface.h  image_sequence_config.h  media_background_extractor.h  thumbnail_cache.h
src/project/: project_manager.cpp
src/ui/: annotation_panel.cpp  annotation_panel.h
src/utils/: exr_layer_detector.cpp  frame_indexing.h  gpu_scheduler.cpp  gpu_scheduler.h  system_pressure_monitor.h
